# Automatic-Subtitle-Generator

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  batch_transcribe.py  benchmark.py  download_model.py  pyproject.toml  requirements.txt  run.py
docs/: DEVELOPMENT.md  FFMPEG_INSTALL.md  PROJECT_MANUAL.md  RELEASE_CHECKLIST.md  WHISPER_BACKENDS.md
subtool/: __init__.py
subtool/cli/: main.py
subtool/core/: orchestrator.py  protocol.py
subtool/hardware/: detect.py
subtool/media/: extract.py
subtool/output/: paths.py  writer.py
subtool/runners/: mlx_qwen3.py
tests/: test_hardware.py  test_media.py  test_output.py  test_protocol.py
